<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PataDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pacientes">Pacientes</string>
    <string name="title_activity_profile">Profile</string>
    <string name="dados">Dados</string>
    <string name="nome">Nome</string>
    <string name="dataNasc">Data Nascimento</string>
    <string name="morada">Morada</string>
    <string name="cc">CC</string>
    <string name="telefone">Telefone</string>
    <string name="episodioClinico">Episódio Clínico</string>
    <string name="episodiosClinico">Episódios Clícnicos</string>
    <string name="edit">Editar</string>
    <string name="call">Telefonar</string>
    <string name="local">Localização</string>
    <string name="save">Guardar</string>
    <string name="novoPaciente">Novo Paciente</string>
    <string name="listaSintomas">Lista Sintomas</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_lista_pacientes">ListaPacientes</string>
    <string name="title_activity_lista_sintomas">Lista Sintomas</string>
    <string name="novoEpisodioClinico">Novo Episódio Clínico</string>
    <string name="title_activity_novo_episodio_clinico">Novo Episodio Clínico</string>
    <string name="listaDiagnosticos">Lista Diagnósticos</string>
    <string name="tratamento">Tratamento</string>
    <string name="remove">Remover</string>


    <string-array name="array_name">
        <item>H</item>
        <item>M</item>
    </string-array>

    <string-array name="sexoArray">
        <item>M</item>
        <item>H</item>
    </string-array>
</resources>
