<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="pt.pata.patadroid.Profile">
    <item android:id="@+id/action_gps"
        android:icon="@drawable/ic_localizacao"
        android:title="@string/local"
        app:showAsAction="always" />
    <item android:id="@+id/action_call"
        android:icon="@drawable/ic_call"
        android:title="@string/call"
        app:showAsAction="always" />
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item android:id="@+id/action_remove"
        android:icon="@drawable/ic_remove"
        android:title="@string/remove"
        app:showAsAction="always" />
</menu>
