<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="pt.pata.patadroid.EditProfile"
    android:background="#EEEEEE">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="#1E9BDD">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_user"
            app:border_width="2dp"
            app:border_color="#FF000000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dados"
                android:id="@+id/textView"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold|italic"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:id="@+id/textView_EditProfile_nome"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_EditProfile_nome"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morada"
                android:id="@+id/textView_EditProfile_morada"
                android:layout_marginLeft="15dp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText_EditProfile_morada"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                android:id="@+id/textView_EditProfile_cc"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText_EditProfile_CC"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:id="@+id/textView_Profile_telefone"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText_EditProfile_Telefone"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataNasc"
                android:id="@+id/textView_EditProfile_dataNascimento"
                android:layout_marginLeft="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/editText_EditProfile_Data"
                android:focusable="false"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:textAlignment="center"
                android:layout_marginRight="15dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
