

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#EEEEEE">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="#1E9BDD">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image_NovoEpisodio"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/ic_user"
                    app:border_width="2dp"
                    app:border_color="#FF000000"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:id="@+id/textView_NovoEpisodio_nome"
                    android:textStyle="bold|italic"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_NovoEpisodio_telefone"
                    android:layout_marginBottom="15dp"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/listaSintomas"
                        android:id="@+id/textView_NovoEpisodio_listaSintomas"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold|italic"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView_NovoEpisodio_novoSintoma"
                        android:src="@drawable/ic_newblack"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1" />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_NovoEpisodio_listaSintomas"
                    android:layout_above="@+id/textView_NovoEpisodio_listaSintomas"
                    android:layout_alignParentBottom="true"
                    android:layout_alignBaseline="@+id/textView_NovoEpisodio_listaSintomas" />


            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gerar Diagnósticos"
                android:id="@+id/button_NovoEpisodio_btnGerarResultados"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/listaDiagnosticos"
                        android:id="@+id/textView2"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold|italic"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_marginLeft="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_weight="8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_newblack"
                        android:layout_alignParentRight="true" />
                </LinearLayout>

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listView_NovoEpisodio_listaDiagnosticos"
                    android:layout_above="@+id/textView2"
                    android:layout_alignParentBottom="true"
                    android:layout_alignBaseline="@+id/textView2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tratamento"
                    android:id="@+id/textView_NovoEpisodio_tratamento"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold|italic"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/textView_NovoEpisodio_tratamentoString"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp" />


            </LinearLayout>
        </LinearLayout>


    </ScrollView>
